--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -289,9 +289,9 @@
             </div>
         </div>
         <div class="under-text">
-                <h1>The only platform that can support your
-                    company at any scale</h1>
-                    <button>Get started</button>
+            <h1>The only platform that can support your
+                company at any scale</h1>
+            <button>Get started</button>
         </div>
     </div>
 
@@ -300,95 +300,126 @@
         <div class="fore-footer">
             <div class="fore-text">
                 <p>1. Accurate as of December 2023, includes free and paid users.</p>
-                <p>2. See the <a href="#">2023 Gartner® Magic Quadrant™ for Collaborative Work Management (CWM)</a>. GARTNER is a registered trademark and service mark of Gartner, Inc. and/or its affiliates in the U.S. and internationally, MAGIC QUADRANT and PEER INSIGHTS are registered trademarks and The GARTNER PEER INSIGHTS CUSTOMERS’ CHOICE badge is a trademark and service mark of Gartner, Inc. and/or its affiliates and is used herein with permission. All rights reserved.</p>
-                <p>3. See <a href="#">The Forrester Wave™: Collaborative Work Management Tools, Q4 2022 report</a>. The Forrester Wave: Collaborative Work Management Tools, Q4 2022. The Forrester Wave is copyrighted by Forrester Research, Inc. Forrester and Forrester Wave are trademarks of Forrester Research, Inc. The Forrester Wave is a graphical representation of Forrester’s call on a market and is plotted using a detailed spreadsheet with exposed scores, weightings, and comments. Forrester does not endorse any vendor, product, or service depicted in the Forrester Wave. Information is based on best available resources. Opinions reflect judgment at the time and are subject to change.</p>
-                <p>4. IDC MarketScape: Worldwide Collaborative Work Management 2023–2024 Vendor Assessment — Uniting Teams, Data, and AI for Flexible Work, Doc #US49434923, December 2023</p>
+                <p>2. See the <a href="#">2023 Gartner® Magic Quadrant™ for Collaborative Work Management (CWM)</a>.
+                    GARTNER is a registered trademark and service mark of Gartner, Inc. and/or its affiliates in the
+                    U.S. and internationally, MAGIC QUADRANT and PEER INSIGHTS are registered trademarks and The GARTNER
+                    PEER INSIGHTS CUSTOMERS’ CHOICE badge is a trademark and service mark of Gartner, Inc. and/or its
+                    affiliates and is used herein with permission. All rights reserved.</p>
+                <p>3. See <a href="#">The Forrester Wave™: Collaborative Work Management Tools, Q4 2022 report</a>. The
+                    Forrester Wave: Collaborative Work Management Tools, Q4 2022. The Forrester Wave is copyrighted by
+                    Forrester Research, Inc. Forrester and Forrester Wave are trademarks of Forrester Research, Inc. The
+                    Forrester Wave is a graphical representation of Forrester’s call on a market and is plotted using a
+                    detailed spreadsheet with exposed scores, weightings, and comments. Forrester does not endorse any
+                    vendor, product, or service depicted in the Forrester Wave. Information is based on best available
+                    resources. Opinions reflect judgment at the time and are subject to change.</p>
+                <p>4. IDC MarketScape: Worldwide Collaborative Work Management 2023–2024 Vendor Assessment — Uniting
+                    Teams, Data, and AI for Flexible Work, Doc #US49434923, December 2023</p>
             </div>
         </div>
 
         <div class="main-footer">
             <div class="main-foot">
-            <div class="footer-links">
-                <p><img src="Assets/Laptop-view/Asana_footer-link.png" alt=""></p>
+                <div class="footer-links">
+                    <p><img src="Assets/Laptop-view/Asana_footer-link.png" alt=""></p>
+                </div>
+                <div class="footer-links">
+                    <p>Asana</p>
+                    <a href="#">Home</a>
+                    <a href="#">Product</a>
+                    <a href="#">What's New</a>
+                    <a href="#">Pricing</a>
+                    <a href="#">Starter</a>
+                    <a href="#">Advanced</a>
+                    <a href="#">Enterprise</a>
+                    <a href="#">Customer Success</a>
+                    <a href="#">Asana Templates</a>
+                    <a href="#">Trust & Security</a>
+                    <a href="#">Status</a>
+                </div>
+                <div class="footer-links">
+                    <p>About Us</p>
+                    <a href="#">Company</a>
+                    <a href="#">Leadership</a>
+                    <a href="#">Customers</a>
+                    <a href="#">Diversity</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Press</a>
+                    <a href="#">Wavelength</a>
+                    <a href="#">Inside Asana</a>
+                    <a href="#">Investor Relations</a>
+                    <a href="#">Sitemap</a>
+                    <a href="#">Modern Slavery<br>Transparency Statement</a>
+                </div>
+                <div class="footer-links">
+                    <p>Workflow Solutions</p>
+                    <a href="#">Project Management</a>
+                    <a href="#">Goal Management</a>
+                    <a href="#">Agile Management</a>
+                    <a href="#">Task Management</a>
+                    <a href="#">Increase Productivity</a>
+                    <a href="#">Work Management</a>
+                    <a href="#">Project Planning</a>
+                    <a href="#">To Do Lists</a>
+                    <a href="#">See All Uses</a>
+                    <a href="#">See All Teams</a>
+                </div>
+                <div class="footer-links">
+                    <p>Resources</p>
+                    <a href="#">Help Center</a>
+                    <a href="#">Forum</a>
+                    <a href="#">Support</a>
+                    <a href="#">App Directory</a>
+                    <a href="#">Developers & API</a>
+                    <a href="#">Partners</a>
+                    <a href="#">Asana Community</a>
+                    <a href="#">Events</a>
+                    <a href="#">Asana for Nonprofits</a>
+                    <a href="#">Asana for Education</a>
+                    <a href="#">Accessibility</a>
+                </div>
+                <div class="footer-links">
+                    <p>Learn</p>
+                    <a href="#">11 Leadership Styles</a>
+                    <a href="#">110 Icebreaker Questions</a>
+                    <a href="#">Executive Summary Tips</a>
+                    <a href="#">Impostor Syndrome Tips</a>
+                    <a href="#">Prevent Team Burnout</a>
+                    <a href="#">SWOT Analysis Tips</a>
+                    <a href="#">What are OKRs?</a>
+                    <a href="#">What are SMART Goals?</a>
+                    <a href="#">What is Scope Creep?</a>
+                    <a href="#">See All resources</a>
+                </div>
             </div>
-            <div class="footer-links">
-                <p>Asana</p>
-                <a href="#">Home</a>
-                <a href="#">Product</a>
-                <a href="#">What's New</a>
-                <a href="#">Pricing</a>
-                <a href="#">Starter</a>
-                <a href="#">Advanced</a>
-                <a href="#">Enterprise</a>
-                <a href="#">Customer Success</a>
-                <a href="#">Asana Templates</a>
-                <a href="#">Trust & Security</a>
-                <a href="#">Status</a>
-            </div>
-            <div class="footer-links">
-                <p>About Us</p>
-                <a href="#">Company</a>
-                <a href="#">Leadership</a>
-                <a href="#">Customers</a>
-                <a href="#">Diversity</a>
-                <a href="#">Careers</a>
-                <a href="#">Press</a>
-                <a href="#">Wavelength</a>
-                <a href="#">Inside Asana</a>
-                <a href="#">Investor Relations</a>
-                <a href="#">Sitemap</a>
-                <a href="#">Modern Slavery<br>Transparency Statement</a>
-            </div>
-            <div class="footer-links">
-                <p>Workflow Solutions</p>
-                <a href="#">Project Management</a>
-                <a href="#">Goal Management</a>
-                <a href="#">Agile Management</a>
-                <a href="#">Task Management</a>
-                <a href="#">Increase Productivity</a>
-                <a href="#">Work Management</a>
-                <a href="#">Project Planning</a>
-                <a href="#">To Do Lists</a>
-                <a href="#">See All Uses</a>
-                <a href="#">See All Teams</a>
-            </div>
-            <div class="footer-links">
-                <p>Resources</p>
-                <a href="#">Help Center</a>
-                <a href="#">Forum</a>
-                <a href="#">Support</a>
-                <a href="#">App Directory</a>
-                <a href="#">Developers & API</a>
-                <a href="#">Partners</a>
-                <a href="#">Asana Community</a>
-                <a href="#">Events</a>
-                <a href="#">Asana for Nonprofits</a>
-                <a href="#">Asana for Education</a>
-                <a href="#">Accessibility</a>
-            </div>
-            <div class="footer-links">
-                <p>Learn</p>
-                <a href="#">11 Leadership Styles</a>
-                <a href="#">110 Icebreaker Questions</a>
-                <a href="#">Executive Summary Tips</a>
-                <a href="#">Impostor Syndrome Tips</a>
-                <a href="#">Prevent Team Burnout</a>
-                <a href="#">SWOT Analysis Tips</a>
-                <a href="#">What are OKRs?</a>
-                <a href="#">What are SMART Goals?</a>
-                <a href="#">What is Scope Creep?</a>
-                <a href="#">See All resources</a>
-            </div>
-        </div>
         </div>
 
         <div class="finish-footer">
-            <p>© 2024 Asana, Inc.</p>
-            <div>
-                <img src="Assets/Laptop-view/Wolrd-icon.png" alt=""><p> English</p>
-              
+            <div class="finish-foot">
+                <div class="foot-text">
+                    <p>© 2024 Asana, Inc.</p>
+                </div>
+
+                <div class="foot-img-text">
+                    <img src="Assets/Laptop-view/Wolrd-icon.png" alt="">
+                    <p>English</p>
+                </div>
+                <div class="fo-links">
+                    <p><a href="#">Terms</a> & <a href="#">Privacy</a></p>
+                </div>
+
+                <div>
+                    <img src="Assets/Laptop-view/Twitter-icon.png" alt="">
+                    <img src="Assets/Laptop-view/IN-icon.png" alt="">
+                    <img src="Assets/Laptop-view/Instagram-icon.png" alt="">
+                    <img src="Assets/Laptop-view/facebook-icon.png" alt="">
+                    <img src="Assets/Laptop-view/Youtube-icon.png" alt="">
+                </div>
+                <div>
+                    <img src="Assets/Laptop-view/App-store.png" alt="">
+                    <img src="Assets/Laptop-view/Google-play.png" alt="">
+                </div>
             </div>
-            <p><a href="#">Terms</a>&<a href="#">Privacy</a></p>
+
         </div>
     </footer>
 
